--- a/leadmanageclient/src/app/components/pages/dashboard/dashboard.component.html
+++ b/leadmanageclient/src/app/components/pages/dashboard/dashboard.component.html
@@ -9,9 +9,9 @@
     </div>
     <div class="card" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">Clients</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Total Clients</h6>
-            <p class="card-text">{{ dashboardData.newClient }}</p>
+            <h5 class="card-title">Rate</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Total Conversion</h6>
+            <p class="card-text">{{ dashboardData.conversionRate }}%</p>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
