--- a/leadmanageclient/src/app/components/pages/pipeline/pipeline.component.html
+++ b/leadmanageclient/src/app/components/pages/pipeline/pipeline.component.html
@@ -57,7 +57,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel">Create Activity</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
@@ -112,6 +112,10 @@
 
                                         <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Create
                                             Activity</button>
+                                        <div *ngIf="successMessage" class="alert alert-success"
+                                            style="margin-top: 10px;">
+                                            {{ successMessage }}
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -222,6 +226,10 @@
 
                                         <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Create
                                             Activity</button>
+                                        <div *ngIf="successMessage" class="alert alert-success"
+                                            style="margin-top: 10px;">
+                                            {{ successMessage }}
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -329,6 +337,10 @@
 
                                         <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Create
                                             Activity</button>
+                                        <div *ngIf="successMessage" class="alert alert-success"
+                                            style="margin-top: 10px;">
+                                            {{ successMessage }}
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -436,6 +448,10 @@
 
                                         <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Create
                                             Activity</button>
+                                        <div *ngIf="successMessage" class="alert alert-success"
+                                            style="margin-top: 10px;">
+                                            {{ successMessage }}
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -542,6 +558,10 @@
 
                                         <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Create
                                             Activity</button>
+                                        <div *ngIf="successMessage" class="alert alert-success"
+                                            style="margin-top: 10px;">
+                                            {{ successMessage }}
+                                        </div>
                                     </form>
                                 </div>
                             </div>
