--- a/leadmanageclient/src/app/components/LoginRegistration/login/login.component.html
+++ b/leadmanageclient/src/app/components/LoginRegistration/login/login.component.html
@@ -1,22 +1,25 @@
 <app-navbar></app-navbar>
-<div class="container mt-5">
+<div class="container" style="margin-top: 200px;">
     <div class="row justify-content-center">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Login</h5>
-                    <form (ngSubmit)="login()" class="form">
+                    <form (ngSubmit)="login()" class="form" #loginform="ngForm">
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" id="username" name="username" [(ngModel)]="loginRequest.username"
-                                required class="form-control" autocomplete="off">
+                                required class="form-control" autocomplete="off" placeholder="Enter username">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" [(ngModel)]="loginRequest.password"
-                                required class="form-control" autocomplete="off">
+                                required class="form-control" autocomplete="off" placeholder="Enter password">
                         </div>
-                        <button type="submit" class="btn btn-primary mt-2">Login</button>
+                        <button type="submit" class="btn btn-primary mt-2" [disabled]="!loginform.valid">Login</button>
+                        <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+                            {{ errorMessage }}
+                        </div>
                     </form>
                 </div>
             </div>
