--- a/leadmanageclient/src/app/components/LoginRegistration/register/register.component.html
+++ b/leadmanageclient/src/app/components/LoginRegistration/register/register.component.html
@@ -1,43 +1,57 @@
 <app-navbar></app-navbar>
-<div class="container mt-5">
+<div class="container" style="margin-top: 100px;">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-body">
                     <h2 class="card-title">Registration</h2>
-                    <form (ngSubmit)="registerUser(signUpRequest)" class="form">
+                    <form (ngSubmit)="registerUser(signUpRequest)" class="form" #registrationForm="ngForm">
+
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" id="username" [(ngModel)]="signUpRequest.username" name="username"
-                                required class="form-control" autocomplete="off">
+                                required class="form-control" autocomplete="off" placeholder="Enter your username">
                         </div>
+
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" id="password" [(ngModel)]="signUpRequest.password" name="password"
-                                required class="form-control" autocomplete="off">
+                                required class="form-control" autocomplete="off" placeholder="Enter your password"
+                                minlength="8" #passwordInput="ngModel">
+                            <div style="margin-top: 10px;"
+                                *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
+                                <div class="alert alert-danger">Password is not strong enough.</div>
+                            </div>
                         </div>
+
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" id="email" [(ngModel)]="signUpRequest.email" name="email" required
-                                class="form-control" autocomplete="off">
+                                class="form-control" autocomplete="off" placeholder="Enter your Email">
                         </div>
+
                         <div class="form-group">
                             <label for="companyname">Company Name</label>
                             <input type="text" id="companyname" [(ngModel)]="signUpRequest.companyname"
-                                name="companyname" required class="form-control" autocomplete="off">
+                                name="companyname" required class="form-control" autocomplete="off"
+                                placeholder="Enter Company name">
                         </div>
+
                         <div class="form-group">
                             <label for="phone">Phone</label>
                             <input type="tel" id="phone" [(ngModel)]="signUpRequest.phone" name="phone" required
-                                class="form-control" autocomplete="off">
+                                class="form-control" autocomplete="off" placeholder="Enter your Phone number"
+                                maxlength="10">
                         </div>
+
                         <div class="form-group">
                             <label for="teamname">Team Name</label>
                             <input type="text" id="teamname" [(ngModel)]="signUpRequest.teamname" name="teamname"
-                                required class="form-control" autocomplete="off">
+                                required class="form-control" autocomplete="off" placeholder="Enter your Team Name">
                         </div>
+
                         <button type="submit" class="btn btn-primary mt-2" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Register</button>
+                            data-bs-target="#exampleModal" [disabled]="!registrationForm.valid">Register</button>
                     </form>
                 </div>
             </div>
