--- a/leadmanageclient/src/app/components/navbar/navbar.component.html
+++ b/leadmanageclient/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" style="position: fixed; top: 0; left: 0; width: 100%;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4"
+    style="position: fixed; top: 0; left: 0; width: 100%; z-index: 999;">
     <div class="container-fluid d-flex justify-content-between">
         <div class="d-flex justify-content-center align-items-center">
             <img src="../../../assets/crm.png" alt="logo" class="logo" />
