--- a/leadmanageclient/src/app/components/pages/leadformpage/leadformpage.component.html
+++ b/leadmanageclient/src/app/components/pages/leadformpage/leadformpage.component.html
@@ -2,13 +2,16 @@
 <div class="container" style="margin-top: 100px;">
     <div class="card">
         <div class="card-header">Lead Form</div>
+        <div *ngIf="successMessage" class="alert alert-success">
+            {{ successMessage }}
+        </div>
         <div class="card-body">
             <form (ngSubmit)="onSubmit()" class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="quote">Quote</label>
                         <input type="text" id="quote" name="quote" [(ngModel)]="lead.quote" autocomplete="off"
-                            class="form-control">
+                            class="form-control" placeholder="Enter quote">
                     </div>
 
                     <div class="form-group">
@@ -19,7 +22,7 @@
 
                     <div class="form-group">
                         <label for="probability">Probability</label>
-                        <input type="text" id="probability" name="probability" autocomplete="off"
+                        <input type="number" id="probability" name="probability" autocomplete="off"
                             [(ngModel)]="lead.probability" class="form-control">
                     </div>
 
